--- a/Wishes/frontend/src/app.css
+++ b/Wishes/frontend/src/app.css
@@ -23,14 +23,14 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+/*
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+}*/
 
 h1 {
   font-size: 3.2em;
@@ -40,13 +40,13 @@ h1 {
 .card {
   padding: 2em;
 }
-
+/*
 #app {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
   text-align: center;
-}
+}*/
 
 button {
   border-radius: 8px;
